--- a/beautyChuSpring/src/main/webapp/view/common/jy_header.html
+++ b/beautyChuSpring/src/main/webapp/view/common/jy_header.html
@@ -28,7 +28,7 @@
 			<!-- gnb -->
 			<ul class="gnb">
 
-				<li class="m1"><a href="#"> <span class="over"></span> <span
+				<li class="m1"><a href="kh-shopinfo.html"> <span class="over"></span> <span
 						class="label">SHOP INFO</span></a>
 					<div class="sub-menu">
 						<ul>
@@ -44,7 +44,7 @@
 					</div></li>
 				<!-- end of li.m1 -->
 
-				<li class="m2"><a href="#"><span class="over"></span><span
+				<li class="m2"><a href="kh-styleman.html"><span class="over"></span><span
 						class="label">Man</span></a>
 					<div class="sub-menu">
 						<ul>
@@ -62,7 +62,7 @@
 
 				<!-- end of li.m2 -->
 
-				<li class="m3"><a href="yun-stylethumbnail.html"><span
+				<li class="m3"><a href="yun-womanstylethumbnail.html"><span
 						class="over"></span><span class="label">woman</span></a>
 					<div class="sub-menu">
 						<ul>
