--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
@@ -95,18 +95,21 @@
 		<!--**************************** 샵 제목 div  ***********************************************-->
 
 		<div id=yun-shoptitle>
-			<h1>Fabien.H</h1>
+			<h1>Juno hair</h1>
 		</div>
 		<!--*****************************************************************************************-->
 		<!--**************************** 샵 내용 div **************************************-->
 
 		<div id='yun-shopcontentdetail'>
 			<pre>
-1.화학적 알칼리를 사용하지 않고 아미노산 단백질로만 시술합니다. 
-2.세라마이드 함유로 모발세포의 응집력을 강화시켰습니다.
-3.고중합 실리콘 함유로 자연스런 웨이브와 매끄러움 윤기가 뛰어납니다.
-4.프로테인 중화제로 웨이브와 클리닉 효과가 오래 지속됩니다.
+안녕하세요^^	준오헤어 가로수길점입니다!
+시원하게 탁트인 통유리의 인테리어로 고급스러움속의 심플함을 느낄 수 있는 곳, 
+다양한 스타일의 트렌드를 창조하는 최고의 스타일리스트와 함께
+준오헤어 가로수길점에서 행복과 여유를 만끽하시기 바랍니다.
 </pre>
+
+
+
 		</div>
 
 
@@ -126,7 +129,7 @@
 </div>
 
 <script type="text/javascript">
-	$('#yun-shopphotolist').load('templates/kh-styleimage-gallery.html');
+	$('#yun-shopphotolist').load('templates/kh-shopimage-gallery.html');
 
 </script>
 <script>
