--- a/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
@@ -7,20 +7,20 @@
 <link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="../css/common.css">
+<link rel="shopsheet" type="text/css" href="../css/common.css">
 
 <style type="text/css">
 /* 스타일 적용 공간! */
-/* * {
+/*  * {
 	border: 1px solid red;
-}
+} 
  */
-#yun-styledetailcontainer {
+#yun-shopdetailcontainer {
 	width: 1150px;
 	height: 600px;
 }
 
-.yun-stylecontainerdiv {
+.yun-shopcontainerdiv {
 	width: 528px;
 	height: 560px;
 	float: left;
@@ -33,29 +33,29 @@
 	float: right;
 }
 
-.yun-stylephotobig {
+.yun-shopphotobig {
 	width: 520px;
 	height: 500px;
 	float: left;
 	margin-bottom: 3px;
 }
 
-.yun-stylephotosmall {
+.yun-shopphotosmall {
 	width: 50px;
 	height: 50px;
 	float: left;
 	margin-left: 3px;
 }
 
-#yun-styletitle {
+#yun-shoptitle {
 	height: 90px;
 }
 
-#yun-stylecontentdetail {
+#yun-shopcontentdetail {
 	height: 130px;
 }
 
-.yun-stylecomment{
+.yun-shopcomment{
 	width : 100%;
 }
 
@@ -71,41 +71,34 @@
 	<div id="wrap-chu" class="wrap-chu">
 
  -->
+    <script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
+    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script>
+<div id=yun-shopdetailcontainer>
 
-<div id=yun-styledetailcontainer>
+	<!--*****************************************************************************************-->
+	<!--**************************** 샵사진 슬라이드가 들어가는 div *****************************-->
+	<div id='yun-shopphotolist' class=yun-shopcontainerdiv>
 
-	<div id=yun-stylephotolist class=yun-stylecontainerdiv>
-
-		<div class=yun-stylephotobig>
-			<img class=yun-stylephotobig src="../images/style-detail/bp1.JPG">
-		</div>
-		<div id=yun-stylephotosmall>
-			<img class=yun-stylephotosmall src="../images/style-detail/bp1.JPG">
-		</div>
-		<div id=yun-stylephotosmall>
-			<img class=yun-stylephotosmall src="../images/style-detail/bp2.JPG">
-		</div>
-		<div id=yun-stylephotosmall>
-			<img class=yun-stylephotosmall src="../images/style-detail/bp3.JPG">
-		</div>
-		<div id=yun-stylephotosmall>
-			<img class=yun-stylephotosmall src="../images/style-detail/bp2.JPG">
-		</div>
 
 
 	</div>
 
-
-
-	<div id=yun-stylecontent class=yun-stylecontainerdiv>
+	<!--*****************************************************************************************-->
+	<!--**************************** 버튼 div  **************************************************-->
+	<div id=yun-shopcontent class=yun-shopcontainerdiv>
 		<div id=yun-buttondiv>
 			<img class=yun-back src="../images/yun-shopdetail/back-icon.png">
 			<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
 		</div>
+		<!--*****************************************************************************************-->
+		<!--**************************** 샵 제목 div  ***********************************************-->
 
 		<div id=yun-styletitle>
 			<h1>자연스러운 네츄럴 펌</h1>
 		</div>
+		<!--*****************************************************************************************-->
+		<!--**************************** 샵 내용 div **************************************-->
 
 		<div id='yun-stylecontentdetail'>
 			<pre>
@@ -114,14 +107,16 @@
 3.고중합 실리콘 함유로 자연스런 웨이브와 매끄러움 윤기가 뛰어납니다.
 4.프로테인 중화제로 웨이브와 클리닉 효과가 오래 지속됩니다.
 </pre>
+
+
 		</div>
+		
+		<h1>
+가격: 30,000원
+
+</h1>
 
 
-		<!-- <div id=yun-stylebutton>
-<button type="button" class=yun-shop-button>샵 더보기</button>
-<button type="button" class=yun-getcouponbutton >쿠폰 받기</button>
-</div>
- -->
 
 
 		<div class=buttondiv>
@@ -134,8 +129,35 @@
 				src="../images/yun-shopdetail/comment.png" />
 		</div>
 	</div>
-
 </div>
+
+<script type="text/javascript">
+	$('#yun-shopphotolist').load('templates/kh-styleimage-gallery.html');
+
+</script>
+<script>
+
+$( document ).ready(function() {
+	$(".kh-smalldetail").css("display", "none");
+$(".yun-shopstyle").hover(
+		  function () {
+			  $(this).find(".kh-smallbasic").css("display", "none");
+			  $(this).find(".kh-smalldetail").css("display", "block");
+			  $(this).find(".kh-gradation").css("display", "block");
+		  },
+		  function () {
+			  $(this).find(".kh-smallbasic").css("display", "block");
+			  $(this).find(".kh-smalldetail").css("display", "none");
+			  $(this).find(".kh-gradation").css("display", "none");
+		  }
+		);
+});
+
+
+
+
+
+</script>
 <!-- 
 	</div>
 
