--- a/beautyChuSpring/src/main/webapp/view/admin/shop_info.html
+++ b/beautyChuSpring/src/main/webapp/view/admin/shop_info.html
@@ -38,7 +38,7 @@
                   <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
               </div>
             <!--logo start-->
-            <a href="#" class="logo"><b>Beauty_Chu Admin</b></a>
+            <a href="coupon.html#" class="logo"><b>Beauty_Chu Admin</b></a>
             <!--logo end-->
             <div class="nav notify-row" id="top_menu">
                 <!--  notification start -->
@@ -115,7 +115,7 @@
                     
                     <!-- inbox dropdown start-->
                     <li id="header_inbox_bar" class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <i class="fa fa-envelope-o"></i>
                             <span class="badge bg-theme">5</span>
                         </a>
@@ -198,16 +198,19 @@
               <!-- sidebar menu start-->
               <ul class="sidebar-menu" id="nav-accordion">
               
-              	  <p class="centered"><a href="#"><img src="assets/img/ui-zac.jpg" class="img-circle" width="60"></a></p>
+              	  <p class="centered"><a href="shop_info.html#"><img src="assets/img/ui-zac.jpg" class="img-circle" width="60"></a></p>
               	  <h5 class="centered">박준 뷰티랩</h5>
               	  <h6 class="centered">서울시 강남구 삼성로 725</h6>
               	  <h6 class="centered">02-511-1414</h6>
               	  	
-                  <li class="mt">
-                      <a href="#">
-                          <i class="fa fa-dashboard"></i>
-                          <span>Dashboard</span> 
+                  <li class="mt sub-menu">
+                      <a href="javascript:;" >
+                          <i class="fa fa-credit-card"></i>
+                          <span>Coupon</span>
                       </a>
+                      <ul class="sub">
+                          <li><a  href="coupon.html">Coupon Management</a></li>
+                      </ul>
                   </li>
 
                   <li class="sub-menu">
@@ -216,12 +219,12 @@
                           <span>Style</span>
                       </a>
                       <ul class="sub">
-                          <li><a href="style_register.html">스타일 등록</a></li>
+                          <li><a href="style_addStyle.html">Add Style</a></li>
                           <li><a  href="style_cut.html">Cut</a></li>
-                          <li><a  href="#">Perm</a></li>
-                          <li><a  href="#">Color</a></li>
-                          <li><a  href="#">Care</a></li>
-                          <li><a  href="#">ETC</a></li>
+                          <li><a  href="style_perm.html#">Perm</a></li>
+                          <li><a  href="style_color.html#">Color</a></li>
+                          <li><a  href="style_care.html#">Care</a></li>
+                          <li><a  href="style_etc.html#">ETC</a></li>
                       </ul>
                   </li>
 
@@ -241,20 +244,11 @@
                           <span>Celebrity</span>
                       </a>
                       <ul class="sub">
-                          <li><a  href="#">Celebrity Man</a></li>
-                          <li><a  href="#">Celebrity Woman</a></li>
+                       		<li><a  href="celeb_man.html#">Celebrity Man</a></li>
+                       		<li><a  href="celeb_woman.html#">Celebrity Woman</a></li>
                       </ul>
                   </li>
-                  <li class="sub-menu">
-                      <a href="javascript:;" >
-                          <i class="fa fa-credit-card"></i>
-                          <span>Coupon</span>
-                      </a>
-                      <ul class="sub">
-                          <li><a  href="#">쿠폰? 예약?</a></li>
-                      </ul>
-                  </li>
-
+                  
               </ul>
               <!-- sidebar menu end-->
           </div>
@@ -267,52 +261,82 @@
       <!--main content start-->
       <section id="main-content">
           <section class="wrapper">
-          	<h3><i class="fa fa-angle-right"></i> Shop Info</h3>
+          	<h3><i class="fa fa-angle-right"></i> Shop</h3>
           	
           	<!-- BASIC FORM ELELEMNTS -->
           	<div class="row mt">
           		<div class="col-lg-12">
                   <div class="form-panel">
-                  	  <!-- <h4 class="mb"><i class="fa fa-angle-right"></i> Style Register</h4> -->
+                  	  <h4 class="mb"><i class="fa fa-angle-right"></i> Shop Info</h4>
                   	  
                       <form class="form-horizontal style-form" method="get">
                       
                           <div class="form-group">
-                              <label class="col-sm-2 col-sm-2 control-label">매장이름</label>
+                              <label class="col-sm-2 col-sm-2 control-label">샵프로필사진</label>
                               <div class="col-sm-10">
-                                  <input type="text" class="form-control round-form">
+                              	<img class="thumb" width="100" src="assets/img/ui-zac.jpg" alt="shop-profile-img">
+                              	<input type="file" id="files-short" name="filesS[]" multiple />
+								<output id="list-short"></output>	
                               </div>
                           </div>
                           
                           <div class="form-group">
-                              <label class="col-sm-2 col-sm-2 control-label">매장주소</label>
+                              <label class="col-sm-2 col-sm-2 control-label">이메일</label>
                               <div class="col-sm-10">
-                                  <input type="text" class="form-control round-form">
+                                  <input type="text" id='email' class="form-control round-form" value="" placeholder="aa@gmail.com">
                               </div>
                           </div>
                           
                           <div class="form-group">
-                              <label class="col-sm-2 col-sm-2 control-label">전화</label>
+                              <label class="col-sm-2 col-sm-2 control-label">사업자번호</label>
                               <div class="col-sm-10">
-                                  <input type="text" class="form-control round-form">
+                                  <input type="text" id='licenseeNo' class="form-control round-form" placeholder="118-444-2443">
                               </div>
                           </div>
                           
                           <div class="form-group">
-                              <label class="col-sm-2 col-sm-2 control-label">핸드폰</label>
+                              <label class="col-sm-2 col-sm-2 control-label">샵이름</label>
                               <div class="col-sm-10">
-                                  <input type="text" class="form-control round-form">
+                                  <input type="text" id='shopName' class="form-control round-form" placeholder="박준 뷰티랩">
                               </div>
                           </div>
                           
                           <div class="form-group">
-                              <label class="col-sm-2 col-sm-2 control-label">소개</label>
+                              <label class="col-sm-2 col-sm-2 control-label">샵주소</label>
                               <div class="col-sm-10">
-                              	<textarea name="shop-info-info" rows="15" cols="200" class="form-control">소개를 입력하세요</textarea>
+                                  <input type="text" id='shopAddr' class="form-control round-form" placeholder="서울시 강남구 삼성로 725">
                               </div>
                           </div>
                           
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">샵전화번호</label>
+                              <div class="col-sm-10">
+                                  <input type="text" id='shopTel' class="form-control round-form" placeholder="02-511-1414">
+                              </div>
+                          </div>
                           
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">샵소개</label>
+                              <div class="col-sm-10">
+                              	<textarea id='shopIntro' name="shop-intro" rows="2" cols="80" class="form-control round-form">박준뷰티랩은 고객의 아름다움과 즐거움을 위해 다양한 뷰티 서비스를 제공합니다.
+고객의 외모뿐 아니라 아름다운 마음으로 나가실 수 있도록 늘 고객에게 집중하고 있습니다.</textarea>
+								<div class="remaining text-right">남은 글자수: <span class="info-count">100</span></div>
+                              </div>
+                          </div>
+                          
+                          <div class="form-group">
+                              <label class="col-lg-2 col-sm-2 control-label">사진</label>
+                              <div class="col-md-8 col-sm-8">
+                                  <input type="text" class="form-control round-form">
+                              </div>
+                              	<button type="submit" class="btn btn-theme">Upload</button>
+                          </div>
+                          
+                          <div class="form-group">
+                          	<div class="col-sm-12">
+                          		<button type="button" id='shop-updateBtn' class="btn btn-theme btn-block btn-lg">Save & Update</button>
+                          	</div>
+                       	  </div>
                           	
                       </form>
                   </div>
@@ -327,7 +351,7 @@
       <!--footer start-->
       <footer class="site-footer">
           <div class="text-center">
-              2014 beauty chu
+              2015 Beauty Chu~♥
               <a href="#" class="go-top">
                   <i class="fa fa-angle-up"></i>
               </a>
@@ -362,16 +386,99 @@
       });
 
     </script>
-    
-    
-  <script>
-      //custom select box
 
-      $(function(){
-          $('select.styled').customSelect();
-      });
+  <!-- shop-info textarea maxlength -->
+  <script type="text/javascript">
+  $(function() {
+	    $('.remaining').each(function() {
+	        // count 정보 및 count 정보와 관련된 textarea/input 요소를 찾아내서 변수에 저장한다.
+	        var $count = $('.info-count', this);
+	        var $input = $(this).prev();
+	        // .text()가 문자열을 반환하기에 이 문자를 숫자로 만들기 위해 1을 곱한다.
+	        var maximumCount = $count.text() * 1;
+	        // update 함수는 keyup, paste, input 이벤트에서 호출한다.
+	        var update = function() {
+	            var before = $count.text() * 1;
+	            var now = maximumCount - $input.val().length;
+	            // 사용자가 입력한 값이 제한 값을 초과하는지를 검사한다.
+	            if (now < 0) {
+	                var str = $input.val();
+	                alert('글자 입력수가 초과하였습니다.');
+	                $input.val(str.substr(0, maximumCount));
+	                now = 0;
+	            }
+	            // 필요한 경우 DOM을 수정한다.
+	            if (before != now) {
+	                $count.text(now);
+	            }
+	        };
+	        // input, keyup, paste 이벤트와 update 함수를 바인드한다
+	        $input.bind('input keyup paste', function() {
+	            setTimeout(update, 0)
+	        });
+	        update();
+	    });
+	    
+	    
+	    
+	    $.ajax({
+			type : 'get',
+			dataType : "json",
+			url : '../../json/auth/loginUser.do',
+			success : function(data) {
+				console.log(data.status);
+				console.log(data.loginUser);
+				alert("추가완료");
+				$('#email').val(data.loginUser.email);
+				console.log(data.loginUser.email);
+			},
+			error : function() {
+				console.log('ajax 실패');
+			}
 
+		});
+	    
+	    
+	    
+	});
   </script>
 
-  </body>
+
+<!-- AJAX로 서버에서 불러오기 스크립트 -->
+<script>
+
+	$('#shop-updateBtn').click(function() {
+		$.ajax({
+			type : 'post',
+			dataType : "json",
+			url : '../../json/shop/update.do',
+			data : {
+				email : $('#email').val(),
+				licenseeNo : $('#licenseeNo').val(),
+				shopName : $('#shopName').val(),
+				shopAddr : $('#shopAddr').val(),
+				shopTel : $('#shopTel').val(),
+				shopIntro : $('#shopIntro').val(),
+				
+			},
+			success : function(data) {
+				console.log(data.status);
+				console.log(data.loginUser);
+				alert("추가완료");
+				//$('#email').html(data.loginUser.email);
+				console.log(data.loginUser.email);
+			},
+			error : function() {
+				console.log('ajax 실패');
+			}
+
+		});
+
+	});
+</script>
+
+
+
+
+</body>
 </html>
