스타일 리스트 db에서 불러오기

--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
@@ -89,7 +89,7 @@
 	<div id=yun-shopcontent class=yun-shopcontainerdiv>
 		<div id=yun-buttondiv>
 			<img class=yun-back src="../images/yun-shopdetail/back-icon.png">
-			<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
+			<!-- <img class=yun-exit src="../images/yun-shopdetail/exit-icon.png"> -->
 		</div>
 		<!--*****************************************************************************************-->
 		<!--**************************** 샵 제목 div  ***********************************************-->
@@ -116,9 +116,9 @@
 
 
 		<div class=buttondiv>
-			<div class="ui button yun-shoppricelist">Price List</div>
-			<div class="ui button kh-shopmap">지도보기</div>
-			<div class="ui button get-coupon">Get Coupon</div>
+			<div class="ui black basic button yun-shoppricelist">Price List ></div>
+			<div class="ui black basic button kh-shopmap">지도보기 ></div>
+			<div class="ui black basic button get-coupon">Get Coupon</div>
 		</div>
 
 		<div id=yun-shopcomment class=yun-shopcomment>
