--- a/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
@@ -89,7 +89,7 @@
 	<div id=yun-shopcontent class=yun-shopcontainerdiv>
 		<div id=yun-buttondiv>
 			<img class=yun-back src="../images/yun-shopdetail/back-icon.png">
-			<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
+			<!-- <img class=yun-exit src="../images/yun-shopdetail/exit-icon.png"> -->
 		</div>
 		<!--*****************************************************************************************-->
 		<!--**************************** 샵 제목 div  ***********************************************-->
@@ -120,8 +120,8 @@
 
 
 		<div class=buttondiv>
-			<div class="ui button yun-shop-button">Shop</div>
-			<div class="ui button get-coupon">Get Coupon</div>
+			<div class="ui black basic button yun-shop-button">Shop ></div>
+			<div class="ui black basic button get-coupon">Get Coupon ></div>
 		</div>
 
 		<div id=yun-stylecomment class=yun-stylecomment>
