--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -13,22 +13,22 @@
 	href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../css/yun/button.min.css">
 
-<!-- 공통 스크립트 -->
-<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+ <!-- 공통 스크립트 -->
 <script type="text/javascript" src="../js/modernizr.min.js"></script>
 <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="../js/jquery.easing.js"></script>
 <script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
 <script type="text/javascript" src="../js/motion.js"></script> 
-<script type="text/javascript" src="../js/jquery.motio.min.js"></script>
+<script type="text/javascript" src="../js/jquery.motio.min.js"></script> 
+
 
 	<script>
 			window.intro = 'yes';
 	</script>
 		
-	<!-- page가 home일 경우에만 로드하는 js -->
-	<script type="text/javascript" src="../js/jquery.touchSwipe.min.js"></script>
+<!-- 	page가 home일 경우에만 로드하는 js -->
+ 	<script type="text/javascript" src="../js/jquery.touchSwipe.min.js"></script>
 	<script type="text/javascript" src="../js/jquery.event.drag-2.2.js"></script>
 	<script type="text/javascript" src="../js/jquery.event.drag.live-2.2.js"></script>
 	<script type="text/javascript" src="../js/home.js"></script>
@@ -36,8 +36,10 @@
 <!-- 공통 스크립트 -->
 
 <script type='text/javascript' src='http://code.jquery.com/jquery-1.7.2.js'></script>
-<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>  
 
+<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
+<script type="text/javascript" src='../js/require.js'></script>
 <style type="text/css">
 
 
@@ -183,9 +185,6 @@ body {
 	float: left;
 }
 
-.get-coupon {
-	float: right;
-}
 
 /* ============================================================== */
 /* yun-test.html css */
@@ -212,6 +211,7 @@ body {
 #yun-shopdetailcontainer {
 	width: 1150px;
 	height: 600px;
+	background-color: white;
 }
 
 #yun-shopstylelist {
@@ -308,6 +308,7 @@ body {
 #yun-styledetailcontainer {
 	width: 1150px;
 	height: 600px;
+	background-color: white;
 }
 
 .yun-stylecontainerdiv {
@@ -337,17 +338,20 @@ body {
 	margin-left: 3px;
 }
 
-#yun-styletitle {
+#yun-styletitle {http://www.aliexpress.com/http://www.aliexpress.com/
 	height: 50px;
 	font-size: 30px;
 }
 
 #yun-stylecontentdetail {
 	height: 130px;
+	line-height: 20px;
 }
 
 .yun-stylecomment {
 	width: 100%;
+	margin-top: 10px;
+	
 }
 
 /* ============================================================== */
@@ -355,6 +359,7 @@ body {
 #yun-shopdetailcontainer {
 	width: 1150px;
 	height: 600px;
+	background-color: white;
 }
 
 .yun-shopcontainerdiv {
@@ -395,10 +400,12 @@ body {
 
 #yun-shopcontentdetail {
 	height: 130px;
+	line-height: 20px;
 }
 
 .yun-shopcomment {
 	width: 100%;
+	margin-top: 10px;
 }
 
 .row {
@@ -407,8 +414,20 @@ body {
 	
 }
 
+
 /* ============================================================== */
 /* ==============================버튼 스타일================================ */
+
+.buttondiv {
+	text-align: center;
+}
+
+.ui.basic.button, .ui.basic.buttons .button {
+
+border-radius: 20px;
+}
+
+
 </style>
 
 </head>
@@ -428,9 +447,8 @@ body {
 
 	<div id="wrap-chu" class="wrap-chu">
 
-		<div class="yun-container">
 
-			<div class="yun-box">
+<!--  			<div class="yun-box">
 				<img class="yun-boximage" src="../images/main/woman (1).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
@@ -442,204 +460,19 @@ body {
 						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
-			</div>
- 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (2).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (3).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (4).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
+			</div>  -->
 
-
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (5).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (6).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (7).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (8).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (9).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (10).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (11).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (12).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (13).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (14).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (15).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div> 
-		</div>
 	</div>
-
+<script id="template" type="text/temp"></script>
 
 
 	<footer>
 		<!-- footer 건들지 말긔! -->
 	</footer>
 
-	<script type="text/javascript"
+<!-- 	<script type="text/javascript"
 		src='../js/resources/jquery-2.1.1.min.js'></script>
-	<script src="../js/resources/starrr.js"></script>
+	<script src="../js/resources/starrr.js"></script> -->
 
 	<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
@@ -683,7 +516,7 @@ body {
 					$(this).remove();
 				});
 				$('.yun-edge').after('<div id=changediv class="yun-info-bg"><div id=yun-div1 class=yun-div><div></div>');
-				$('#yun-div1').load('templates/yun-shopdetail.html');
+				$('#yun-div1').load('templates/yun-styledetail.html');
 				$('.yun-info-bg').slideDown();
 				setTimeout(function () {  $('html, body').animate({scrollTop:$('.yun-info-bg').position().top-75}, 'slow');  });
 				pagebtnnum=2;
@@ -812,17 +645,43 @@ body {
 			});
 
 		
+		
+		
+		
+/* 		$.getJSON('../json/style/list.do', 
+			    function(data){
+				console.log(data);
+			      
+			      require(['text!templates/kh-style-photo.html'], function(html){
+			      console.log(html);
+					
+			        var template = Handlebars.compile(html);
+			        $('#wrap-chu').html( template(data) );
+			      });
+			    });  */
+		
+				
+				$.getJSON('../json/style/list.do', 
+					    function(data){
+						
+						console.log(data);
+					/*         require(['text!templates/style-table.html'], function(html){
+						console.log(html);
+					        var template = Handlebars.compile(html);
+					        $('#listDiv').html( template(data) );
+					      });   */
+					      $('#template').load('templates/style-table.html', function(source){
+					    	  console.log(source);
+						    	  var template = Handlebars.compile(source);
+						    	  var html = template(data);
+						    	  console.log(html);
+						    	  $('#wrap-chu').html(html);
+						    	});  
+					    });
+			    
 	</script>
 	
-	<script>
 
-
-
-
-
-
-
-</script>
 
 </body>
 </html>
