jy 20150116 회원가입, 로그인, 마이페이지-회원정보변경, 회원탈퇴, 메뉴바 98% Fin

--- a/beautyChuSpring/src/main/webapp/css/jy/jy_header.css
+++ b/beautyChuSpring/src/main/webapp/css/jy/jy_header.css
@@ -419,3 +419,11 @@
 	font-size: 3.0em;
 	font-weight: bold;
 }
+/* 메뉴바 */
+.jy-mypage { text-indent: 0;}
+
+/* 메뉴바 닉네임 */
+.user-nickname { color: white; background-color: rgba(22, 22, 22, 1); 
+								border: 1px solid rgba(22, 22, 22, 1); 
+								width: 90px;
+								}
