--- a/beautyChuSpring/src/main/webapp/view/templates/style-table.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/style-table.html
@@ -1,8 +1,8 @@
-<div class="yun-container">
+
 					{{#each styleList}}
- 			<div class="yun-box">
- 				<img class="yun-boximage" src={{stylePhoto}}>
- 									<div class="kh-basic">
+ 			<div class="yun-box" data-no="{{stylenumber}}">
+ 				<img class="yun-boximage" src={{url}}>
+ 					<div class="kh-basic">
 						<h2>{{styleName}}</h2>
 						<div class="starrr"></div>
 					</div>
@@ -15,4 +15,3 @@
  			</div>
 						{{/each}}
 
-</div>
