--- a/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
@@ -135,7 +135,7 @@
 	$('#yun-shopphotolist').load('templates/kh-styleimage-gallery.html');
 
 </script>
-<script>
+<!-- <script>
 
 $( document ).ready(function() {
 	$(".kh-smalldetail").css("display", "none");
@@ -157,7 +157,7 @@ $(".yun-shopstyle").hover(
 
 
 
-</script>
+</script> -->
 <!-- 
 	</div>
 
